--- a/서유진/about.html
+++ b/서유진/about.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="about2">
                             <div class="info">
-                                <h3>Info <em>i</em><em>i</em><em>i</em></h3>
+                                <h3>Record <em>i</em><em>i</em><em>i</em></h3>
                                 <h4>Education</h4>
                                 <ul>
                                     <li>2021 안산대학교 졸업 (IT응용보안 전공, 2년제)</li>
@@ -104,17 +104,73 @@
 
                                 <h4>Certificate</h4>
                                 <ul>
-                                    <li>정보처리 기능사(2021)</li>
-                                    <li>정보처리 산업기사(2021)</li>
-                                    <li>웹 디자인 기능사(2023)</li>
-                                    <li>SQL 개발자(SQLD)(2021)</li>
-                                    <li>리눅스 마스터 2급(2021)</li>
+                                    <li>정보처리 기능사(2021) - 22211100622W</li>
+                                    <li>정보처리 산업기사(2021) - 21402105464E</li>
+                                    <li>웹 디자인 기능사(2023) - 23404102305C</li>
+                                    <li>SQL 개발자(SQLD)(2021) - SQLD-042007075</li>
+                                    <li>리눅스 마스터 2급(2021) - LMS-2102-004871</li>
                                 </ul>
 
+                                <h4>Development</h4>
+                                <ul>
+                                    <li>Spring Boot를 이용한 도서 구매 사이트</li>
+                                    <li>Python의 크롤링 기능을 이용한 뉴스 기사 사이트</li>
+                                    <li>라즈베리파이를 이용한 얼굴인식 도어락</li>
+                                    <li>웹표준을 준수한 사이트 제작</li>
+                                    <li>node.js를 이용한 블로그 제작</li>
+                                    <li>PHP를 이용한 블로그 제작</li>
+                                </ul>
 
+                                <h4>Tool</h4>
+                                <div class="tool">
+                                    <span>
+                                        <img alt="JavaScript"
+                                            src="https://img.shields.io/badge/JavaScript-F7DF1E?style=flat&logo=JavaScript&logoColor=white">
+                                    </span>
+                                    <span><img alt="HTML5"
+                                            src="https://img.shields.io/badge/HTML5-E34F26?logo=HTML5&logoColor=white"></span>
+                                    <span><img alt="CSS3"
+                                            src="https://img.shields.io/badge/CSS3-1572B6?logo=CSS3&logoColor=white"></a></span>
+                                    <span><img alt="PHP"
+                                            src="https://img.shields.io/badge/PHP-777BB4?logo=PHP&logoColor=white"></span>
+                                </div>
                             </div>
                         </div>
-                        <div class="about3">3</div>
+                        <div class="about2 noline">
+                            <div class="info">
+                                <h3>Ability <em>i</em><em>i</em><em>i</em><em>i</em></h3>
+                                <h4>Skill</h4>
+                                <ul class="skill">
+                                    <li><em>Node.js</em><span class="s70"></span></li>
+                                    <li><em>Next.js</em><span class="s80"></span></li>
+                                    <li><em>PHP</em><span class="s70"></span></li>
+                                    <li><em>JAVA</em><span class="s80"></span></li>
+                                    <li><em>Python</em><span class="s70"></span></li>
+                                    <li><em>React.js</em><span class="s90"></span></li>
+                                    <li><em>Vue.js</em><span class="s100"></span></li>
+                                    <li><em>Vite.js</em><span class="s70"></span></li>
+                                    <li><em>HTML/CSS</em><span class="s90"></span></li>
+                                </ul>
+                                <h4>Education</h4>
+                                <ul>
+                                    <li>2021 안산대학교 졸업 (IT응용보안 전공, 2년제)</li>
+                                    <li>2016 경일 관광 고등학교 졸업 (금융정보 전공)</li>
+                                </ul>
+
+                                <h4>Courses</h4>
+                                <ul>
+                                    <li>공공 데이터를 활용한 Node.js 전문가 양성 육성</li>
+                                    <li>자바 파이썬을 활용한 머신러닝 개발자 양성과정</li>
+                                </ul>
+
+                                <h4>Personality</h4>
+                                <p>논리적 사고를 중시하며, 잘못된 주장에 대해 논리적 증거를 제시하고 의견을 논리적으로 정립하는 것을 중요시합니다. 자신의 잘못을 인정할 때는 겸손함을
+                                    가지려고 노력하고 있어요.</p>
+                                <p>인간관계에서는 트러블이 거의 없었고, 서로의 좋은 점을 알아가며 즐거워하는 편입니다. 어렸을 때부터 개그맨이라는 꿈을 품어 웃음을 선사하고, 상대를
+                                    이해하는 과정을 소중히 여깁니다.</p>
+                                <p>타인에게는 관대한 마음을 가지면서도 자기 자신에게는 더 나은 모습을 추구하는 노력을 아끼지 않고 있어요.</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="mc-inner-bottom">
