--- a/임종한/index.html
+++ b/임종한/index.html
@@ -123,7 +123,45 @@
     </div>
     <!-- //section3 -->
 
-    <div id="section4"></div><!-- //section1 -->
+    <div id="section4">
+        <div class="title">
+            <span class="img"></span>
+            <div class="split t1">profile,</div>
+            <div class="split t2">& skill</div>
+            <p class="desc2">
+                협업없이 혼자 프로젝트를 추진하는 것은 혼자만의 시야와 지식으로 한정된 결과물을 가져온다고 생각합니다.<br>
+                협업을 통한 팀원 간의 피드백과 검토 과정은 다양한 문제에 대한 해결방안과 다양한 기술과 관점을 빠르게 배울 수 있는 기회라고 생각합니다.
+            </p>
+        </div>
+        <div class="about-wrap">
+            <div class="left"></div>
+            <div class="right">
+                <dl>
+                    <dt>1. What do you think makes front-end development attractive?</dt>
+                    <dd>론트엔드의 영역은 코드와 디자인이 만나는 독특한 공간이기에, 웹 개발에 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 개발의 전반적인 부분을 담당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>2. What do you think makes front-end development attractive?</dt>
+                    <dd>론트엔드의 영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다. 영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다. 영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>3. What do you think makes front-end development attractive?</dt>
+                    <dd>론트엔드의 영역은 코드와 디자인이 예상되지만 개발의 전영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.을 담당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>4. What do you think makes front-end development attractive?</dt>
+                    <dd>론트엔드의 영역은 코드와 디자인이 만나는 독특한 공간이기에, 웹 개발에 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 개발의 전반적인 부분을 담당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                    <dt>5. What do you think makes front-end development attractive?</dt>
+                    <dd>영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.영역은 코= 있어 프론트엔드가 할 수 있는 일이 정말 많다고 생각합니다. 그만큼 부딪혀야 할 일이 많아 험난할
+                        것이라 예상되지만 한 켠으로는 설레는 일이라 생각됩니다.당할 수 있다는 점 때문에, 한 켠으로는 설레는 일이라 생각됩니다.</dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+    <!-- //section4 -->
+
     <div id="section5"></div><!-- //section1 -->
     <div id="section6"></div><!-- //section1 -->
 
@@ -183,7 +221,7 @@
         }, 4000)
 
         const ani1 = gsap.timeline();
-        ani1.to("#section2 .imgWrap", {marginLeft: "-50%" })
+        ani1.to("#section2 .imgWrap", { marginLeft: "-50%" })
 
         ScrollTrigger.create({
             animation: ani1,
@@ -194,7 +232,7 @@
             anticipatePin: 1,
             markers: true
         });
-        
+
     </script>
 </body>
 
