--- a/김희진2/index.html
+++ b/김희진2/index.html
@@ -44,8 +44,8 @@
             <div>11</div>
             <div>code</div>
             <div>FRONT</div>
-            <div class="imgWrap">
-                <div class="img"></div>
+            <div class="img">
+                <img src="assets/img/aaaa.jpg" alt="dd">
             </div>
         </div>
     </div>
@@ -141,7 +141,8 @@
                     <em>Awwwards</em>
                     <strong>유기동물 플랫폼 웹사이트입니다. 유기동물들을 입양하고 정보를 공유하는 플랫폼입니다</strong>
                     <i class="icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="27" viewBox="0 0 34 27" fill="#F14620">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="34" height="27" viewBox="0 0 34 27"
+                            fill="#F14620">
                             <path d="M28.6726 0H26.4629V2.15055H28.6726V0Z" fill="F14620"></path>
                             <path d="M28.6726 2.64844H26.4629V4.79899H28.6726V2.64844Z" fill="F14620"></path>
                             <path d="M28.6726 5.29297H26.4629V7.44352H28.6726V5.29297Z" fill="F14620"></path>
@@ -225,7 +226,7 @@
                             <path d="M2.20974 5.29297H0V7.44352H2.20974V5.29297Z" fill="F14620"></path>
                             <path d="M2.20974 7.94141H0V10.092H2.20974V7.94141Z" fill="F14620"></path>
                             <path d="M2.20974 10.5859H0V12.7365H2.20974V10.5859Z" fill="F14620"></path>
-                          </svg>
+                        </svg>
                     </i>
                 </li>
                 <li>
@@ -258,8 +259,90 @@
     </div>
     <!-- //section4 -->
 
-    <div id="section5"></div>
-    <div id="section6"></div>
+    <div id="section5">
+        <div class="desc split">
+            We are a design agency based in Copenhagen. With a strong belief in strategically founded and highly crafted
+            digital experiences
+        </div>
+
+        <div class="sec5-text">
+            <div class="text-left">
+                <h3>Which Statck do you use?</h3>
+            </div>
+            <div class="text-right">
+                <dl>
+                    <dt class="noTop">{ 자바스크립트 }</dt>
+                    <dd>클로저, 프로미스, 콜백, 비동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고 효과적으로 사용할 수 있습니다.</dd>
+                    <dd>자바스크립트 기반의 프론트엔드 라이브러리나 프레임워크(예: React, Vue.js, Angular 등)를 숙련되게 사용할 수 있습니다. 이를 통해 동적이고 반응형 웹
+                        애플리케이션을 구축할 수 있습니다.</dd>
+                </dl>
+                <dl>
+                    <dt>{ 리액트 }</dt>
+                    <dd>Javascript의 배열, 메소드, DOM을 이해하며 다양한 상황에 적용할 수 있습니다.</dd>
+                    <dd>자바스크립트의 최신 버전(ES6/ES2015 이상)에서 도입된 새로운 기능과 문법(예: 화살표 함수, 클래스, 템플릿 리터럴, 구조 분해 할당 등)을 활용할 수 있습니다.
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>{ 노드제이에스 }</dt>
+                    <dd>복잡한 문제를 진단하고 해결할 수 있는 능력을 갖추고 있습니다. 성능 최적화 및 메모리 관리에 대한 이해를 바탕으로 더 빠르고 효율적인 코드를 작성할 수 있습니다</dd>
+                    <dd>단위 테스트, 통합 테스트 등을 통해 코드의 안정성을 검증하고, Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>{ 제이쿼리 }</dt>
+                    <dd>복잡한 문제를 진단하고 해결할 수 있는 능력을 갖추고 있습니다. 성능 최적화 및 메모리 관리에 대한 이해를 바탕으로 더 빠르고 효율적인 코드를 작성할 수 있습니다</dd>
+                    <dd>단위 테스트, 통합 테스트 등을 통해 코드의 안정성을 검증하고, Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                    <dd>통합 테스트 등을 통해 코드의 안정성을 검증하고, Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                    <dd>Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                </dl>
+                <dl>
+                    <dt>{ 피에이치피 }</dt>
+                    <dd>단위 테스트, 통합 테스트 등을 통해 코드의 안정성을 검증하고, Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                    <dd>통합 테스트 등을 통해 코드의 안정성을 검증하고, Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                    <dd>Git과 같은 버전 관리 시스템을 사용하여 협업과 코드 관리를 수행할 수 있습니다.</dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+    <!-- //section5 -->
+
+    <div id="section6">
+        <div class="sec6-text">
+            <div class="text-left">
+                <h3>WHICH STATCK DO SAY HI!</h3>
+            </div>
+            <div class="text-right">
+                <div class="comment-wrap">
+
+                    <div class="comment noTop">
+                        <span class="title">1. <em>첫번째 댓글</em> </span>
+                        <p class="cont">포트폴리오가 너무 멋있네요!! <span class="auth">지나가는 사람(30분전)</span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">2. <em>두번째 댓글</em></span>
+                        <p class="cont">가까운 미래에 당신은 우리와 함께 추억의 길을 따라 여행을 떠날 기회를 갖게 될 것입니다. 봄/여름이 포함된 매년 중요한 순간과 하이라이트를
+                            축하하는 데 동참할 수 있습니다. <span class="auth">포폴이(30분전)</span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">3. <em>세번째 댓글</em></span>
+                        <p class="cont">Node.js나 다른 백엔드 기술과의 통합 경험을 보유하고 있을 수도 있으며, RESTful API 또는 GraphQL API를 통한 데이터
+                            통신과 처리에 능숙할 수 있습니다. <span class="auth">갈대(1시간)</span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">4. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니다. 고급 프로그래밍 개념의 이해와 적용: 당신은 클로저, 프로미스, 콜백, 비동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고
+                            효과적으로 사용할 수 있습니다. 이러한 개념들을 활용하여 더 효율적이고 강력한 코드를 작성할 수 있습니다. <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- //section6 -->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
@@ -323,7 +406,7 @@
 
 
         gsap.to(".weather", {
-            yPercent: 100,  
+            yPercent: 100,
             ease: "none",
             scrollTrigger: {
                 trigger: document.body,
