--- a/권초록/index3.html
+++ b/권초록/index3.html
@@ -69,9 +69,69 @@
     </section>
     <!-- //section2 -->
 
-    <section id="section3"></section>
-    <section id="section4"></section>
-    <section id="section5"></section>
+    <section id="section3">
+        <h3>what i do</h3>
+        <div class="sec3__inner">
+            <ul>
+                <li>htmlcss</li>
+                <li>reactnext</li>
+                <li>javascript</li>
+                <li class="active"><span>nodeexpress</span><em>노드를 통해 서버를 구현합니다.<br>노드.js 블로그 포폴을 확인하세요!</em></li>
+                <li>phpmysql</li>
+            </ul>
+        </div>
+    </section>
+    <!-- //section3 -->
+
+    <section id="section4">
+        <h3>EXPERIENCE</h3>
+        <div class="sec4__inner">
+            <div class="sec4__mask">
+                <div>나는 흐름을 <span>주도하는 풀스택</span> 령정 개발자입니다. </div>
+                <div>모든 열정과 결정에 다 같이 지식과 열정을 바칩니다. </div>
+                <div>혁신적이고 사용자 중심적인 소프트웨어 제작합니다. </div>
+            </div>
+            <div class="sec4__text">
+                <div>I am a <span>full-stack developer</span> driven by </div>
+                <div>knowledge and passion, dedicated to </div>
+                <div>crafting innovative & user-centric software </div>
+            </div>
+        </div>
+    </section>
+    <!-- //section4 -->
+
+    <section id="section5">
+        <h3>portfolio</h3>
+        <div class="sec5__inner">
+            <div class="work work1">
+                <div class="left">
+                    <div class="work__mask">
+                        <div>유튜브를 이용하여 데이터를 불러오고 뿌리는 방법을 익혔습니다.</div>
+                        <div>youtube API를 호출하여 반복문을 통하여 화면에 노출하고</div>
+                        <div>세부적인 사항을 고려하여 작성했습니다.</div>
+                    </div>
+                    <div class="work__text">
+                        <div>I learned how to load and distribute data using YouTube.</div>
+                        <div>Call the YouTube <span>API</span> and display it on the screen through a loop.</div>
+                        <div>It was <span>written</span> with every detail in mind.</div>
+                    </div>
+                    <div class="work__info">
+                        <a href="/">VIEW SITE : https://cssgradient.io/ </a>
+                        <a href="/">CODE VIEW : https://github.com/webstoryboy </a>
+                    </div>
+                </div>
+                <div class="right">
+
+                </div>
+            </div>
+            <div class="work work2"></div>
+            <div class="work work3"></div>
+            <div class="work work4"></div>
+            <div class="work work5"></div>
+        </div>
+    </section>
+    <!-- //section5 -->
+    å
     <section id="section6"></section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.147.0/three.min.js"></script>
