--- a/김희진2/index.html
+++ b/김희진2/index.html
@@ -45,7 +45,8 @@
             <div>code</div>
             <div>FRONT</div>
             <div class="img">
-                <img src="assets/img/aaaa.jpg" alt="dd">
+                <img src="https://portfolio-react-var.vercel.app/static/media/%EA%B9%80%ED%9D%AC%EC%A7%842.cdbd70bcfa45f133dde6.jpg"
+                    alt="dd">
             </div>
         </div>
     </div>
@@ -334,9 +335,69 @@
                     <div class="comment">
                         <span class="title">4. <em>네번째 댓글</em></span>
                         <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니다. 고급 프로그래밍 개념의 이해와 적용: 당신은 클로저, 프로미스, <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">5. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니백, 비동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고
+                            효과적으로 사용할 수 있습니다. 이러한 개념들을 활용하여 더 효율적이고 강력한 코드를 작성할 수 있습니다. <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">6. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니다. 고급 프로그래밍 개념의 이해와 적용: 당신은 클로저, 프로미스, 콜백, 비동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고
+                            효과적으로를 작성할 수 있습니다. <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">8. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니다. 고급 프로그래밍 개동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고
+                            효과적으로 사용할 수 있습니다. 이러한 개념들을 활용하여 더 효율적이고 강력한 코드를 작성할 수 있습니다. <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">9. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
+                            숙련도를 보여줄 수 있습니다. <span class="auth">백수(4일전)
+                            </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title">10. <em>네번째 댓글</em></span>
+                        <p class="cont">각 기술을 사용하여 완성한 주요 프로젝트를 나열하고, 그 프로젝트에서의 역할과 기여도를 강조합니다. 이를 통해 실제 작업 경험을 바탕으로 한
                             숙련도를 보여줄 수 있습니다. 고급 프로그래밍 개념의 이해와 적용: 당신은 클로저, 프로미스, 콜백, 비동기 프로그래밍과 같은 고급 자바스크립트 개념을 이해하고
                             효과적으로 사용할 수 있습니다. 이러한 개념들을 활용하여 더 효율적이고 강력한 코드를 작성할 수 있습니다. <span class="auth">백수(4일전)
                             </span></p>
+                    </div>
+
+                    <div class="comment">
+                        <span class="title"><em>나도 댓글 쓰기</em></span>
+                        <div class="cont comment__form">
+                            <form action="/" method="POST">
+                                <fieldset>
+                                    <legend className="blind">댓글 쓰기 영역</legend>
+                                    <div class="input">
+                                        <label htmlFor="youName" className="required blind">글쓴이</label>
+                                        <input type="text" name="title" id="youName" placeholder='누구니?' />
+                                        <label htmlFor="youName" className="required blind">비밀번호</label>
+                                        <input type="text" name="title" id="youName" placeholder='비밀번호' />
+                                    </div>
+                                    <div class="text">
+                                        <label htmlFor="youConts" className="required blind">글 내용</label>
+                                        <textarea name="content" id="youConts" placeholder='댓글은 적당히 써주세요!'></textarea>
+                                    </div>
+                                    <button type="submit" className="btn__style2 mt30">댓글 쓰기</button>
+                                </fieldset>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -344,30 +405,62 @@
     </div>
     <!-- //section6 -->
 
+    <div id="section7">
+        <span>SAY bye!</span>
+        <div class="bottom">
+            <ul>
+                <li><a href="#">about</a></li>
+                <li><a href="#">project</a></li>
+                <li><a href="#">site</a></li>
+                <li><a href="#">contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <!-- //section7 -->
+
+
+    <div class="modal__wrap">
+        <div class="modal m1">
+            <div class="modal__inner">
+                <div class="modal__left">
+                    <img src="https://springsummer.imgix.net/uploads/Magasin-01.png" alt="">
+                </div>
+                <div class="modal__right">
+                    <h4>{ 제이쿼리 }</h4>
+                    <p>복잡한 문제를 진단하고 해결할 수 있는 능력을 갖추고 있습니다. 성능 최적화 및 메모리 관리에 대한 이해를 바탕으로 더 빠르고 효율적인 코드를 작성할 수 있습니다</p>
+                    <p>프로토타입을 작성해본 적이 없었던 와중에 Figma라는 툴이 새롭게 나오게 되었고 이걸 프로젝트에 적용하여 프로토타입을 작성해보면 좋을 것 같다고 말씀하셔서 적용하게
+                        되었습니다. 사실상 기술적인 면과 크게 관련되어 있진 않지만 프로토타입을 작성하면서 배웠던 점은 개발을 하기전에 뭘 개발해야 할지 명확하게 파악할 수 있었다는 점 입니다.
+                        본래, 개발을 할 때는 의식의 흐름으로 개발을 하고는 했는데 프로토타입을 통해서 체계적인 구조를 세우는 방법과 실제로 시연해봄으로써 발생할 수 있는 버그/예외 케이스 등에
+                        대해 예측 할 수 있었습니다.</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- <div class="modal m2">
+            <div class="modal__inner"></div>
+        </div>
+
+        <div class="modal m3">
+            <div class="modal__inner"></div>
+        </div>
+
+        <div class="modal m4">
+            <div class="modal__inner"></div>
+        </div> -->
+    </div>
+
+
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1/bundled/lenis.min.js"></script>
     <script src="https://unpkg.com/split-type"></script>
+
+
 
     <script>
         gsap.registerPlugin(ScrollTrigger);
-
-        const lenis = new Lenis({
-            duration: 1,
-            easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t))
-        });
-
-        lenis.on('scroll', (e) => {
-            console.log(e)
-        })
-
-        function raf(time) {
-            lenis.raf(time)
-            requestAnimationFrame(raf)
-        }
-
-        requestAnimationFrame(raf);
-
         const targets = gsap.utils.toArray(".split");
 
         targets.forEach(target => {
