--- a/강서현/index.html
+++ b/강서현/index.html
@@ -107,6 +107,56 @@
     </div>
     <!-- //section5 -->
 
+    <div id="section6">
+        <div class="text">
+            <div class="split">creative</div>
+            <div class="split">developer</div>
+            <div>kang seo hyeon</div>
+        </div>
+
+        <div class="img">
+            <img src="assets/img/se.png" alt="ddd">
+        </div>
+
+        <div class="input">
+            <input class="input1" type="text" placeholder="이름">
+            <input class="input2" type="text" placeholder="비밀번호">
+            <input class="input3" type="text" placeholder="댓글">
+            <button>댓글 쓰기</button>
+        </div>
+
+        <div class="comment__wrap">
+            <div class="comment c1">
+                사진이 너무 이쁘네요!!
+                <span>10분전 <em>...</em></span>
+            </div>
+
+            <div class="comment c2">
+                어떤 프론트엔드 기술이나 프레임워크를 사용했나요?
+                <span>20분전 <em>...</em></span>
+            </div>
+
+            <div class="comment c3">
+                포트폴리오에 포함된 프로젝트들은 어떤 종류인가요? 예를 들어, 웹사이트, 웹 애플리케이션, 인터랙티브 요소 등이 있을 수 있습니
+                <span>1일전 <em>...</em></span>
+            </div>
+
+            <div class="comment c4">
+                디자인의 전반적인 느낌은 어떤가요? 사용자 인터페이스(UI)와 사용자 경험(UX) 디자인의 특징에 대해 말씀해주실 수 있나요?
+                <span>1일전 <em>...</em></span>
+            </div>
+
+            <div class="comment c5">
+                번호좀???
+                <span>1일전 <em>...</em></span>
+            </div>
+
+            <div class="comment c6">
+                웹사이트나 애플리케이션의 로딩 시간, 반응 속도 등 성능 측면에서 어떤 점을 고려했나요?
+                <span>1일전 <em>...</em></span>
+            </div>
+        </div>
+    </div>
 
 
 
