--- a/권초록/index3.html
+++ b/권초록/index3.html
@@ -124,15 +124,108 @@
 
                 </div>
             </div>
-            <div class="work work2"></div>
+
+            <div class="work work2">
+                <div class="left">
+                    <div class="work__mask">
+                        <div>유튜브를 이용하여 데이터를 불러오고 뿌리는 방법을 익혔습니다.</div>
+                        <div>youtube API를 호출하여 반복문을 통하여 화면에 노출하고</div>
+                        <div>세부적인 사항을 고려하여 작성했습니다.</div>
+                    </div>
+                    <div class="work__text">
+                        <div>I learned how to load and distribute data using YouTube.</div>
+                        <div>Call the YouTube <span>API</span> and display it on the screen through a loop.</div>
+                        <div>It was <span>written</span> with every detail in mind.</div>
+                    </div>
+                    <div class="work__info">
+                        <a href="/">VIEW SITE : https://cssgradient.io/ </a>
+                        <a href="/">CODE VIEW : https://github.com/webstoryboy </a>
+                    </div>
+                </div>
+                <div class="right">
+
+                </div>
+            </div>
+            <!-- //work2 -->
+
             <div class="work work3"></div>
             <div class="work work4"></div>
             <div class="work work5"></div>
         </div>
     </section>
     <!-- //section5 -->
-    å
-    <section id="section6"></section>
+
+    <section id="section6">
+        <div class="sec6__inner">
+            <div class="sec6__text">
+                <div class="small">my motto</div>
+                <div>good Coding</div>
+                <div>is honest</div>
+                <div class="small">kwon green</div>
+            </div>
+            <div class="comment">
+                <input type="text" placeholder="한마디 부탁해요!">
+                <input type="text" placeholder="비밀번호" class="pass">
+                <button>댓글 쓰기</button>
+            </div>
+            <div class="comment__view">
+                <div class="view">
+                    포트폴리오가 너무 멋있네요!!
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    포트폴리오가 너무 멋있네요!!
+                    어떻게 작업했냐요! 무엇으로 만들었나요?
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    이 작품들은 정말 놀라워요! 각각의 디테일과 색상 사용이 인상적입니다.
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    이 포트폴리오를 보고 정말 감동받았습니다. 창의적인 아이디어와 완벽한 실행이 돋보여요
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    단순히 놀라운 수준이 아니라, 예술 작품 같아요. 정말 감탄스럽습니다!
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    각 작품마다 독특한 스토리와 감정이 느껴져요. 매우 인상적입니다
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    이 포트폴리오는 진정한 예술 작품의 모음집이에요. 각 작품이 주는 강렬한 인상이 잊혀지지 않네요
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    크리에이티브한 아이디어와 탁월한 기술의 결합이 정말 눈부시네요!
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    이렇게 독창적이고 세련된 작품들을 보는 것은 정말 즐거운 경험입니다.
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    각 작품이 전하는 감정과 메시지가 너무 강렬해서 마음이 움직이네요.
+                    <span>1분전<em>...</em></span>
+                </div>
+                <div class="view">
+                    이 포트폴리오는 진정한 재능의 증거입니다. 각 작품에서 본인의 열정이 느껴져요.
+                    <span>1분전<em>...</em></span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- //section6 -->
+
+    <section id="section7">
+
+    </section>
+
+    <section id="section8">
+
+    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.147.0/three.min.js"></script>
     <script>
