--- a/권초록/index3.html
+++ b/권초록/index3.html
@@ -148,7 +148,27 @@
             </div>
             <!-- //work2 -->
 
-            <div class="work work3"></div>
+            <div class="work work3">
+                <div class="left">
+                    <div class="work__mask">
+                        <div>유튜브를 이용하여 데이터를 불러오고 뿌리는 방법을 익혔습니다. <span>Youtube API</span>를 호출하여 반복문을 통하여 화면에 노출하고 세부적인
+                            사항을 고려하여
+                            작성했습니다.</div>
+                    </div>
+                    <div class="work__text">
+                        <div>I learned how to load and distribute data using YouTube.</div>
+                        <div>Call the YouTube <span>API</span> and display it on the screen through a loop.</div>
+                        <div>It was <span>written</span> with every detail in mind.</div>
+                    </div>
+                    <div class="work__info">
+                        <a href="/">VIEW SITE : https://cssgradient.io/ </a>
+                        <a href="/">CODE VIEW : https://github.com/webstoryboy </a>
+                    </div>
+                </div>
+                <div class="right">
+
+                </div>
+            </div>
             <div class="work work4"></div>
             <div class="work work5"></div>
         </div>
@@ -220,12 +240,38 @@
     <!-- //section6 -->
 
     <section id="section7">
-
+        <h3>contact</h3>
+        <div class="section7__inner">
+            <div class="class__list">
+                <ul>
+                    <li><a href="#">github</a></li>
+                    <li><a href="#">codepen</a></li>
+                    <li><a href="#">behance</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">youtube site</a></li>
+                    <li><a href="#">movie site</a></li>
+                    <li><a href="#">pet site</a></li>
+                    <li><a href="#">pph site</a></li>
+                    <li><a href="#">portfolio site</a></li>
+                    <li><a href="#">webstand site</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">javascript</a></li>
+                    <li><a href="#">css</a></li>
+                    <li><a href="#">gsap</a></li>
+                    <li><a href="#">quiz</a></li>
+                    <li><a href="#">search</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#"><em>email</em>javascript@naver.com</a></li>
+                    <li><a href="#"><em>kakao</em>javascript</a></li>
+                </ul>
+            </div>
+            <div class="class__copy">2024 ⓒ green Corp.<br>리액트로 제작된 포트폴리오입니다.</div>
+        </div>
     </section>
 
-    <section id="section8">
-
-    </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.147.0/three.min.js"></script>
     <script>
