--- a/이명훈/main.html
+++ b/이명훈/main.html
@@ -104,8 +104,143 @@
         </div>
     </div>
     <!-- //section2 -->
-    <div id="section3"></div>
-    <div id="section4"></div>
+
+    <div id="section3">
+        <h4>port list</h4>
+        <div class="list__wrap">
+            <div class="list__cate">
+                <span>javascript</span>
+                <span>react</span>
+                <span class="active">mysql</span>
+                <span>html/css</span>
+                <span>php</span>
+                <span>jquery</span>
+            </div>
+            <div class="list__item">
+                <div class="item">
+                    <h4>GTP를 이용한 이미지 만들기</h4>
+                    <p>
+                        비전공자도 IT 인재로 성장 가능한 부트캠프 지금 신청하고, 원티드 인증뱃지로 취업까지! 기본기에 충실한 기초 교육부터 실전형 프로젝트와 해커톤까지 모두 경험할 수
+                        있습니다.
+                        멋쟁이사자처럼의 11년 교육 노하우가 담긴 테킷 KDT 스쿨 과정은 커리큘럼의 밀도부터 다릅니다.</p>
+                    <ul>
+                        <li><span class="icon"></span>리액트를 이용한 구조 작업</li>
+                        <li><span class="icon"></span>GTP 이용한 구조 작업</li>
+                        <li><span class="icon"></span>next 이용한 구조 작업</li>
+                    </ul>
+                </div>
+
+                <div class="item">
+                    <h4>GTP를 이용한 이미지 만들기</h4>
+                    <p>
+                        비전공자도 IT 인재로 성장 가능한 부트캠프 지금 신청하고, 원티드 인증뱃지로 취업까지! 기본기에 충실한 기초 교육부터 실전형 프로젝트와 해커톤까지 모두 경험할 수
+                        있습니다.
+                        멋쟁이사자처럼의 11년 교육 노하우가 담긴 테킷 KDT 스쿨 과정은 커리큘럼의 밀도부터 다릅니다.</p>
+                    <ul>
+                        <li><span class="icon"></span>리액트를 이용한 구조 작업</li>
+                        <li><span class="icon"></span>GTP 이용한 구조 작업</li>
+                        <li><span class="icon"></span>next 이용한 구조 작업</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- //section3 -->
+
+    <div id="section4">
+        <h4>comment</h4>
+        <div class="comment__wrap">
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">명훈님의 노력과 실력이 담겨있는거 같고, 정리 잘되어있어서 보기 좋은거 같아요!! 저도 이렇게 정리 잘하고 싶네요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요! 저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거
+                    같아요! 저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment">
+                <div class="img"></div>
+                <div class="desc">저도 이런 포트폴리오를 만들고싶어요. 정리가 너무 훌륭합니다. 실력자인거 같아요!</div>
+                <div class="info">
+                    <span>학원 사람</span>
+                    <span>2023.03.02 09시에 작성</span>
+                    <span class="line">...</span>
+                </div>
+            </div>
+            <div class="comment input">
+                <input type="text" placeholder="이름">
+                <input type="text" placeholder="비밀번호">
+                <input type="text" placeholder="대글 쓰는 곳">
+                <button>추가하기</button>
+            </div>
+        </div>
+    </div>
+    <!-- //section4 -->
     <div id="section5"></div>
     <div id="section6"></div>
 
@@ -121,7 +256,6 @@
         gsap.set(".sec2-wrap .right h2", { opacity: 0, y: 30 })
         gsap.set(".sec2-wrap .right h3", { opacity: 0, x: 30 })
         gsap.set(".sec2-wrap .right p", { opacity: 0, y: 20 })
-
 
         document.querySelector(".sec2-cont .img").addEventListener("click", () => {
             let tl = gsap.timeline();
